# mcp-office-reader

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  PERFORMANCE_IMPROVEMENTS.md  README.md  RUST_VS_PYTHON_PERFORMANCE.md  build.rs
.cargo/: config.toml
.cursor/rules/: crate-references.mdc
docs/: environment_variables.md  powerpoint_snapshots.md
docs/references/: index.md  rmcp.md
examples/: demo_new_features.md  performance_comparison.rs  rust_vs_python_benchmark.rs  test_path_resolution.rs  test_powerpoint.rs  test_powerpoint_snapshot.rs  test_streaming.rs
scripts/: build-linux.ps1  build-linux.sh
src/: cache_system.rs  document_parser.rs  fast_pdf_extractor.rs  lib.rs  main.rs  mcp_handler.rs  powerpoint_parser.rs  shared_utils.rs  streaming_parser.rs
tests/: e2e_test.rs  test.xlsx
