[package]
name = "office_reader_mcp"
version = "0.1.0"
edition = "2024"

[[example]]
name = "test_streaming"
path = "examples/test_streaming.rs"

[[example]]
name = "performance_comparison"
path = "examples/performance_comparison.rs"

[[example]]
name = "rust_vs_python_benchmark"
path = "examples/rust_vs_python_benchmark.rs"

[[example]]
name = "test_powerpoint"
path = "examples/test_powerpoint.rs"

[[example]]
name = "test_powerpoint_snapshot"
path = "examples/test_powerpoint_snapshot.rs"

[dependencies]
rmcp = { version = "0.5.0", features = ["server"] }
calamine = "0.30.0"  # For Excel files - using older version to avoid yanked zip dependency
pdf-extract = "0.9.0"  # For PDF files - SLOW, kept for fallback
lopdf = "0.36.0"  # For better PDF processing with page-by-page support
pdfium-render = { version = "0.8.31", features = ["thread_safe", "image"], optional = true }  # FASTEST - Google's Pdfium
mupdf = { version = "0.5.0", optional = true }  # VERY FAST - MuPDF bindings
poppler-rs = { version = "0.25.0", optional = true }  # FAST - Poppler bindings
docx-rs = "0.4.18"  # For DOCX files
zip = "4.3.0"  # For manual PPTX parsing
quick-xml = "0.38.1"  # For XML parsing in PPTX files
image = "0.25.6"  # For image format conversion and manipulation
resvg = "0.45.1"  # SVG rendering to raster images
tiny-skia = "0.11.4"  # 2D graphics library for rendering
fontdb = "0.23.0"  # Font database for text rendering
anyhow = "1.0.99"  # For error handling
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.30"  # For streaming support
tokio-stream = "0.1.15"  # For async streaming
lazy_static = "1.4.0"  # For global PDF cache
log = "0.4.22"  # For logging
base64 = "0.22.1"  # For embedded image handling
regex = "1.11.1"  # For text processing

[dev-dependencies]
serde_json = "1.0.107"
tempfile = "3.20.0"
rmcp = { version = "0.5.0", features = ["client", "transport-child-process"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.15"  # For streaming tests
cargo-tarpaulin = "0.32.8"

# Add binary target for testing
[[bin]]
name = "office_reader_mcp"
path = "src/main.rs"

[features]
default = ["pdf-extract-only"]
# Feature flags for different PDF backends
pdfium = ["pdfium-render"]  # Enable pdfium-render backend (fastest, requires native libs)
mupdf_backend = ["mupdf"]   # Enable MuPDF backend (fast, requires native libs)  
poppler = ["poppler-rs"]    # Enable Poppler backend (fast, requires native libs)
pdf-extract-only = []       # Use only pdf-extract (slower but no native dependencies)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
